--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header id ="inicio" class="header-content">
-            <section>
+            <div>
                 <img
                     src="img/logo-blanco.png"
                     alt="logo-web"
@@ -43,7 +43,7 @@
                 </datalist>
 
                 <button type="submit"><i class="fas fa-search"></i></button>
-            </section>
+            </div>
         </header>
         <nav class="nav-bar">
             <ul>
@@ -55,9 +55,9 @@
             </ul>
         </nav>
         <main>
-            <section class="contenido">
-                <article class="formulario-hijo-contenido">
-                    <h2>contacto</h2>
+            <section class="img-text-content">
+                <article class="two-col">
+                    <h3>contacto</h3>
                     <form action="#">
                         <div>
                             <label for="nombre-apellido"></label>
@@ -103,47 +103,44 @@
                         </div>
                     </form>
                 </article>
-                <article class="datos-hijo-contenido">
-                    <h2>datos de contacto</h2>
+                <article class="two-col datos-info">
+                    <h3>datos de contacto</h3>
                     <ul>
                         <li>Direcci&oacute;n: Alberdi 8942</li>
-                        <li class="telefonos">Tel&eacute;fonos:</li>
-                        <ul class="telefonos">
+                        <li class="telefonos">Tel&eacute;fono: 2345-9877
+                        </li>
+                        <!-- <ul class="telefonos">
                             <li>2345-9877</li>
                             <li>2451-7465</li>
-                        </ul>
+                        </ul> -->
                         <li>Celular: 011-4578-9603</li>
                         <li>Email: famedic@gmail.com</li>
-                        <li>
-                            Web
-                            <div>
-                                <a
-                                    href="https://www.facebook.com/"
-                                    target="_blank"
-                                    ><i class="fab fa-facebook"></i
-                                ></a>
-                                <a
-                                    href="https://www.instagram.com/"
-                                    target="_blank"
-                                    ><i class="fab fa-instagram"></i
-                                ></a>
-                                <a
-                                    href="https://www.twitter.com/"
-                                    target="_blank"
-                                    ><i class="fab fa-twitter"></i
-                                ></a>
-                            </div>
-                        </li>
                     </ul>
+                    <div class="web-list">
+                        <p>Web</p>
+                        <a
+                            href="https://www.facebook.com/"
+                            target="_blank"
+                            ><i class="fab fa-facebook"></i
+                        ></a>
+                        <a
+                            href="https://www.instagram.com/"
+                            target="_blank"
+                            ><i class="fab fa-instagram"></i
+                        ></a>
+                        <a
+                            href="https://www.twitter.com/"
+                            target="_blank"
+                            ><i class="fab fa-twitter"></i
+                        ></a>
+                    </div>
                 </article>
             </section>
             <article class="ubicacion">
-                <h2>ubicaci&oacute;n</h2>
+                <h3>ubicaci&oacute;n</h3>
                 <figure>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18837.85971248061!2d-58.487492826505516!3d-34.64581921516853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1601494854012!5m2!1ses!2sar"
-                        width="600"
-                        height="450"
                         frameborder="0"
                         style="border: 0"
                         allowfullscreen=""
@@ -158,29 +155,26 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-left">
-                    <h4>Datos del Grupo:</h4>
+                    <h5 class="footer-title">Datos del Grupo</h5>
                     <p>Ezequiel Panigazzi - 38.695.636</p>
                     <p>Lucas Zacarias - 42.436.419</p>
                     <p>Julian Castro - 39.347.169</p>
                 </div>
                 <div class="footer-center">
-                    <h4>Nombre inferior</h4>
+                    <h5 class="footer-title">Nombre inferior</h5>
                     <ul>
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
                         <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
-                            <a
-                                href="mapa.html"
-                                >Hospitales</a
-                            >
+                            <a href="mapa.html">Hospitales</a>
                         </li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-right">
-                    <h4>Redes Sociales:</h4>
+                    <h5 class="footer-title">Redes Sociales</h5>
                     <div>
                         <a href="https://www.facebook.com/" target="_blank"
                             ><i class="fab fa-facebook"></i
