--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header id="inicio" class="header-content">
-            <section>
+            <div>
                 <img
                     src="./img/logo-blanco.png"
                     alt="logo-web"
@@ -42,7 +42,7 @@
                 </datalist>
 
                 <button type="submit"><i class="fas fa-search"></i></button>
-            </section>
+            </div>
         </header>
         <nav class="nav-bar">
             <ul>
@@ -64,43 +64,48 @@
             </section>
             <section class="detalles-title">
                 <h1>COVID-19</h1>
-                <article class="detalles-content">
-                    <img src="img/covid-19.jpg" alt="covid-19" />
-                    <p>
-                        También conocida como enfermedad por coronavirus e
-                        incorrectamente como neumonía por coronavirus,nota​ es
-                        una enfermedad infecciosa causada por el virus
-                        SARS-CoV-2.
-                        <br />
-                        Produce síntomas similares a los de la gripe o catarro,
-                        entre los que se incluyen fiebre, tos ,disnea, mialgia y
-                        fatiga. En casos graves se caracteriza por producir
-                        neumonía, síndrome de dificultad respiratoria
-                        aguda,sepsi​ y choque séptico que conduce a cerca de
-                        3,75 % de los infectados a la muerte según la OMS.​ No
-                        existe tratamiento específico; las medidas terapéuticas
-                        principales consisten en aliviar los síntomas y mantener
-                        las funciones vitales.
-                        <br />
-                        La transmisión del SARS-CoV-2 se produce mediante
-                        pequeñas gotas —microgotas de Flügge​— que se emiten al
-                        hablar, estornudar, toser o espirar, que al ser
-                        despedidas por un portador (que puede no tener síntomas
-                        de la enfermedad o estar incubándola) pasan directamente
-                        a otra persona mediante la inhalación, o quedan sobre
-                        los objetos y superficies que rodean al emisor, y luego,
-                        a través de las manos, que lo recogen del ambiente
-                        contaminado, toman contacto con las membranas mucosas
-                        orales, nasales y oculares, al tocarse la boca, la nariz
-                        o los ojos.
-                    </p>
+                <article class="img-text-content">
+                    <div class="two-col">
+                        <img src="img/covid-19.jpg" alt="covid-19" />
+                    </div>
+                    <div class="two-col">
+                        <p>
+                            También conocida como enfermedad por coronavirus e
+                            incorrectamente como neumonía por coronavirus,nota​
+                            es una enfermedad infecciosa causada por el virus
+                            SARS-CoV-2.
+                            <br />
+                            Produce síntomas similares a los de la gripe o
+                            catarro, entre los que se incluyen fiebre, tos
+                            ,disnea, mialgia y fatiga. En casos graves se
+                            caracteriza por producir neumonía, síndrome de
+                            dificultad respiratoria aguda,sepsi​ y choque
+                            séptico que conduce a cerca de 3,75 % de los
+                            infectados a la muerte según la OMS.​ No existe
+                            tratamiento específico; las medidas terapéuticas
+                            principales consisten en aliviar los síntomas y
+                            mantener las funciones vitales.
+                            <br />
+                            La transmisión del SARS-CoV-2 se produce mediante
+                            pequeñas gotas —microgotas de Flügge​— que se emiten
+                            al hablar, estornudar, toser o espirar, que al ser
+                            despedidas por un portador (que puede no tener
+                            síntomas de la enfermedad o estar incubándola) pasan
+                            directamente a otra persona mediante la inhalación,
+                            o quedan sobre los objetos y superficies que rodean
+                            al emisor, y luego, a través de las manos, que lo
+                            recogen del ambiente contaminado, toman contacto con
+                            las membranas mucosas orales, nasales y oculares, al
+                            tocarse la boca, la nariz o los ojos.
+                        </p>
+                    </div>
                 </article>
             </section>
             <div class="detail-subtitle">
-                <h2>
+                <h3>
                     formulario de detecci&oacute; (test) de coronavirus
                     (covid-19)
-                </h2>
+                </h3>
             </div>
             <section class="form-content">
                 <article class="form-left">
@@ -359,7 +364,7 @@
             </section>
             <section class="precauciones-content">
                 <article class="detail-subtitle">
-                    <h2>medidas de precauci&oacute;n</h2>
+                    <h3>medidas de precauci&oacute;n</h3>
                 </article>
                 <article class="precauciones-primer-fila">
                     <div>
@@ -397,44 +402,40 @@
                     </div>
                 </article>
             </section>
-            <section class="hospital-map-content">
+            <section class="img-text-content">
                 <article class="detail-subtitle">
-                    <h2>
+                    <h3>
                         hospital m&aacute;s cercano especializado en la
                         enfermedad
-                    </h2>
+                    </h3>
                 </article>
-                <article class="hospital-map-info">
-                    <div class="hospital-datos-content">
-                        <h3>HOSPITAL PIROVANO</h3>
-                        <ul class="hospital-datos">
-                            <li>
-                                <i class="fas fa-phone-square-alt"></i>
-                                +54-114546-4300
-                            </li>
-                            <li>
-                                <i class="fas fa-map-marker-alt"></i> Av. Monroe
-                                3555, CABA
-                            </li>
-                            <li>
-                                <i class="fas fa-city"></i> Buenos Aires, CABA
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <figure>
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13142.207367246363!2d-58.479820030224616!3d-34.5649008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb67d776e79c9%3A0xe8722cf090719409!2sHospital%20Pirovano!5e0!3m2!1ses!2sar!4v1601431387743!5m2!1ses!2sar"
-                                width="600"
-                                height="450"
-                                frameborder="0"
-                                style="border: 0"
-                                allowfullscreen=""
-                                aria-hidden="false"
-                                tabindex="0"
-                            ></iframe>
-                        </figure>
-                    </div>
+                <article class="two-col">
+                    <h4>HOSPITAL PIROVANO</h4>
+                    <ul class="hospital-datos">
+                        <li>
+                            <i class="fas fa-phone-square-alt"></i>
+                            +54-114546-4300
+                        </li>
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i> Av. Monroe
+                            3555, CABA
+                        </li>
+                        <li>
+                            <i class="fas fa-city"></i> Buenos Aires, CABA
+                        </li>
+                    </ul>
+                </article>
+                <article class="two-col">
+                    <figure>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13142.207367246363!2d-58.479820030224616!3d-34.5649008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb67d776e79c9%3A0xe8722cf090719409!2sHospital%20Pirovano!5e0!3m2!1ses!2sar!4v1601431387743!5m2!1ses!2sar"
+                            frameborder="0"
+                            style="border: 0"
+                            allowfullscreen=""
+                            aria-hidden="false"
+                            tabindex="0"
+                        ></iframe>
+                    </figure>
                 </article>
             </section>
             <a href="#inicio" class="arriba"></a>
@@ -442,13 +443,13 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-left">
-                    <h4>Datos del Grupo:</h4>
+                    <h5 class="footer-title">Datos del Grupo</h5>
                     <p>Ezequiel Panigazzi - 38.695.636</p>
                     <p>Lucas Zacarias - 42.436.419</p>
                     <p>Julian Castro - 39.347.169</p>
                 </div>
                 <div class="footer-center">
-                    <h4>Nombre inferior</h4>
+                    <h5 class="footer-title">Nombre inferior</h5>
                     <ul>
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
@@ -461,7 +462,7 @@
                     </ul>
                 </div>
                 <div class="footer-right">
-                    <h4>Redes Sociales:</h4>
+                    <h5 class="footer-title">Redes Sociales</h5>
                     <div>
                         <a href="https://www.facebook.com/" target="_blank"
                             ><i class="fab fa-facebook"></i
