--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         />
     </head>
     <body>
-        <header id ="inicio" class="header-content">
-            <section>
+        <header id="inicio" class="header-content">
+            <div>
                 <img
                     src="./img/logo-blanco.png"
                     alt="logo-web"
@@ -42,7 +42,7 @@
                 </datalist>
 
                 <button type="submit"><i class="fas fa-search"></i></button>
-            </section>
+            </div>
         </header>
         <nav class="nav-bar">
             <ul>
@@ -58,14 +58,13 @@
                 <img src="./img/slider-principal.png" alt="covid" />
             </section>
             <section class="pastilla-title">
-                <h2>FAMADEIC</h2>
+                <h1>FAMADEIC</h1>
                 <h4>Servicios de salud integral</h4>
             </section>
             <section class="pastillas-content">
                 <article>
                     <div>
-                        <a
-                            href="mapa.html"
+                        <a href="mapa.html"
                             ><img
                                 src="./img/hospital-icon.png"
                                 alt="hospitales-icon"
@@ -73,17 +72,14 @@
                         /></a>
                     </div>
                     <div class="pastillas-link-content">
-                        <a
-                            href="mapa.html"
-                            class="pastillas-link"
+                        <a href="mapa.html" class="pastillas-link"
                             >Hospitales</a
                         >
                     </div>
                 </article>
                 <article>
                     <div>
-                        <a
-                             href="listado-enfermedades.html"
+                        <a href="listado-enfermedades.html"
                             ><img
                                 src="./img/enfermedad-icon-new.png"
                                 alt="enfermedad-icon"
@@ -100,8 +96,7 @@
                 </article>
                 <article>
                     <div>
-                        <a
-                            href="vacunas.html"
+                        <a href="vacunas.html"
                             ><img
                                 src="./img/vacuna-icon.png"
                                 alt="vacunas-icon"
@@ -109,9 +104,7 @@
                         /></a>
                     </div>
                     <div class="pastillas-link-content">
-                        <a
-                            href="vacunas.html"
-                            class="pastillas-link"
+                        <a href="vacunas.html" class="pastillas-link"
                             >Vacunas</a
                         >
                     </div>
@@ -126,34 +119,31 @@
                     <i class="fas fa-phone-alt"><span> 148</span></i>
                 </div>
             </aside>
-             <a href="#inicio" class="arriba"></a>
+            <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
             <div class="footer-content">
                 <div class="footer-left">
-                    <h4>Datos del Grupo:</h4>
+                    <h5 class="footer-title">Datos del Grupo</h5>
                     <p>Ezequiel Panigazzi - 38.695.636</p>
                     <p>Lucas Zacarias - 42.436.419</p>
                     <p>Julian Castro - 39.347.169</p>
                 </div>
                 <div class="footer-center">
-                    <h4>Nombre inferior</h4>
+                    <h5 class="footer-title">Nombre inferior</h5>
                     <ul>
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
                         <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
-                            <a
-                                href="mapa.html"
-                                >Hospitales</a
-                            >
+                            <a href="mapa.html">Hospitales</a>
                         </li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-right">
-                    <h4>Redes Sociales:</h4>
+                    <h5 class="footer-title">Redes Sociales</h5>
                     <div>
                         <a href="https://www.facebook.com/" target="_blank"
                             ><i class="fab fa-facebook"></i
