--- a/mapa.html
+++ b/mapa.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header id ="inicio" class="header-content">
-        <section>
+        <div>
             <img
                     src="./img/logo-blanco.png"
                     alt="logo-web"
@@ -41,7 +41,7 @@
             </datalist>
 
             <button type="submit"><i class="fas fa-search"></i></button>
-        </section>
+        </div>
     </header>
     <nav class="nav-bar">
         <ul>
@@ -59,9 +59,7 @@
                 mapa de hospitales disponibles
             </h2>
             <figure>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d69081.85573409697!2d-58.58600361747326!3d-34.66468267042572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospitales!5e0!3m2!1ses-419!2sar!4v1601570312777!5m2!1ses-419!2sar" 
-                width="600" 
-                height="450" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d69081.85573409697!2d-58.58600361747326!3d-34.66468267042572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospitales!5e0!3m2!1ses-419!2sar!4v1601570312777!5m2!1ses-419!2sar"  
                 frameborder="0" 
                 style="border:0;"
                 allowfullscreen="" 
@@ -75,29 +73,26 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left">
-                <h4>Datos del Grupo:</h4>
+                <h5 class="footer-title">Datos del Grupo</h5>
                 <p>Ezequiel Panigazzi - 38.695.636</p>
                 <p>Lucas Zacarias - 42.436.419</p>
                 <p>Julian Castro - 39.347.169</p>
             </div>
             <div class="footer-center">
-                <h4>Nombre inferior</h4>
+                <h5 class="footer-title">Nombre inferior</h5>
                 <ul>
                     <li>
                         <a href="listado-enfermedades.html">Enfermedades</a>
                     </li>
                     <li><a href="vacunas.html">Vacunas</a></li>
                     <li>
-                        <a
-                            href="mapa.html"
-                            >Hospitales</a
-                        >
+                        <a href="mapa.html">Hospitales</a>
                     </li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-right">
-                <h4>Redes Sociales:</h4>
+                <h5 class="footer-title">Redes Sociales</h5>
                 <div>
                     <a href="https://www.facebook.com/" target="_blank"
                         ><i class="fab fa-facebook"></i
